--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_vat.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_vat.jrxml
@@ -78,6 +78,10 @@ WHERE
 				<reportElement x="0" y="0" width="190" height="11" uuid="0e5835da-3706-4fa7-9a45-8b9bc1ec2a02"/>
 				<box>
 					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8" isBold="true"/>
@@ -95,6 +99,10 @@ WHERE
 				</reportElement>
 				<box>
 					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<staticText>
 					<reportElement x="0" y="0" width="40" height="10" uuid="56b97948-d25c-46a3-844e-2f1e5c2c8c9a">
@@ -110,7 +118,8 @@ WHERE
 					<reportElement x="40" y="0" width="90" height="10" uuid="3b95c19e-c139-4a9a-bff9-c16d9a8db54b">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4730a37e-9827-46ef-a3a2-4be1a74c1457"/>
 					</reportElement>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
+					<box rightPadding="5"/>
+					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="6"/>
 					</textElement>
 					<text><![CDATA[IMPONIBILE]]></text>
@@ -129,17 +138,21 @@ WHERE
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="10" splitType="Stretch">
+		<band height="7" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 			<frame>
-				<reportElement x="0" y="0" width="190" height="10" uuid="a82f73d7-61b6-4909-8eff-6bab3c8d5b44">
+				<reportElement x="0" y="0" width="190" height="7" uuid="a82f73d7-61b6-4909-8eff-6bab3c8d5b44">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textField>
-					<reportElement x="0" y="0" width="40" height="10" uuid="6b67282d-87c1-4e30-bd23-cb1e6d9b2e98">
+					<reportElement x="0" y="0" width="40" height="7" uuid="6b67282d-87c1-4e30-bd23-cb1e6d9b2e98">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="345f4eb1-ce2f-480e-8462-fc1566cd5cee"/>
 					</reportElement>
 					<box leftPadding="5"/>
@@ -148,8 +161,8 @@ WHERE
 					</textElement>
 					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_tax_taxindicator}]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement x="40" y="0" width="90" height="10" uuid="cc0ed8b5-cecd-4262-9507-7512271f53c0">
+				<textField pattern="¤#,##0.00;¤-#,##0.00">
+					<reportElement x="40" y="0" width="90" height="7" uuid="cc0ed8b5-cecd-4262-9507-7512271f53c0">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4730a37e-9827-46ef-a3a2-4be1a74c1457"/>
 					</reportElement>
 					<box rightPadding="5"/>
@@ -159,7 +172,7 @@ WHERE
 					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxbaseamt}]]></textFieldExpression>
 				</textField>
 				<textField pattern="¤#,##0.00;¤-#,##0.00">
-					<reportElement x="130" y="0" width="60" height="10" uuid="e49d8247-28e7-456c-bfa1-8066f056a2bd">
+					<reportElement x="130" y="0" width="60" height="7" uuid="e49d8247-28e7-456c-bfa1-8066f056a2bd">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="69798bca-668d-4761-8dbb-614747510b22"/>
 					</reportElement>
 					<box rightPadding="5"/>
@@ -167,6 +180,22 @@ WHERE
 						<font size="6"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxamt}]]></textFieldExpression>
+				</textField>
+			</frame>
+		</band>
+		<band height="9">
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
+			<frame>
+				<reportElement x="0" y="0" width="190" height="9" isRemoveLineWhenBlank="true" uuid="28483c2c-216c-4ab3-adc0-35ea832be5f5"/>
+				<textField isBlankWhenNull="true">
+					<reportElement x="0" y="0" width="190" height="9" uuid="73b4392b-320f-42e8-8ba1-5252f41e0063">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="2a42e339-3cca-4032-94d6-c0d24d9732b4"/>
+					</reportElement>
+					<box leftPadding="5"/>
+					<textElement verticalAlignment="Middle">
+						<font size="5" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_tax_note}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
